SigmaCodebackup3rdSep/objects/Product_Inventory_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product InventoryHistorys</relationshipLabel>
        <relationshipName>Product_InventoryHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Qty__c</fullName>
        <label>Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Buying_Price__c</fullName>
        <label>Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Qty__c</fullName>
        <label>Delivered Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product InventoryHistorys (Inventory)</relationshipLabel>
        <relationshipName>Product_InventoryHistorys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product InventoryHistorys (Parent Account)</relationshipLabel>
        <relationshipName>Product_InventoryHistorys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductCode</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product InventoryHistorys</relationshipLabel>
        <relationshipName>Product_InventoryHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Minimum_Qty__c</fullName>
        <formula>ProductCode__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Minimum Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>ProductCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Qty__c</fullName>
        <label>Purchased Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Become_Out_Of_Stock__c</fullName>
        <label>Quantity To Become Out Of Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Qty__c</fullName>
        <label>Reserved Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Qty__c</fullName>
        <label>Shipped Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockValue__c</fullName>
        <formula>Available_Qty__c  *  Average_Buying_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StockValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Availability__c</fullName>
        <formula>Available_Qty__c &gt;= Quantity_To_Become_Out_Of_Stock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock_Out_Quantity__c</fullName>
        <label>Stock Out Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Value__c</fullName>
        <label>Stock Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Available_Qty__c</fullName>
        <label>Total Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qty__c</fullName>
        <label>Total Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Available_Qty__c</fullName>
        <label>Web Available Qty</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Inventory History</label>
    <nameField>
        <label>Product Inventory History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product InventoryHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>